api_versioned_docs/version-12.0.0/avalonia/automation/peers/noneautomationpeer.mdx
---
title: 'NoneAutomationPeer'
hide_title: true
slug: '/avalonia/automation/peers/noneautomationpeer'
uid: 'Avalonia.Automation.Peers.NoneAutomationPeer'
commentId: 'T:Avalonia.Automation.Peers.NoneAutomationPeer'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Automation.Peers'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">NoneAutomationPeer Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Automation.Peers</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

An automation peer which represents an element that is exposed to automation as non-
interactive or as not contributing to the logical structure of the application.

</div>

<div className="apiref-page__signature">

```csharp
public class NoneAutomationPeer
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="automationpeer">AutomationPeer</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="controlautomationpeer">ControlAutomationPeer</a> <span className="apiref-page__relation-separator">-&gt;</span> NoneAutomationPeer
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [NoneAutomationPeer](#uid-fb7816724a) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-fb7816724a"></span>

### NoneAutomationPeer Constructor

```csharp
public NoneAutomationPeer(Avalonia.Controls.Control owner)
```

#### Parameters

`owner` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


</section>

## Methods

| Name | Description |
| --- | --- |
| [CreatePeerForElement](controlautomationpeer.mdx#uid-01e76040e7) | Gets the [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) for a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control), creating it if necessary. Inherited from [ControlAutomationPeer](controlautomationpeer.mdx). |
| [FromElement](controlautomationpeer.mdx#uid-f0c358c33d) | Gets an existing [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) for a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control). Inherited from [ControlAutomationPeer](controlautomationpeer.mdx). |
| [GetOrCreate](controlautomationpeer.mdx#uid-d5fc666c05) | Inherited from [ControlAutomationPeer](controlautomationpeer.mdx). |
| [BringIntoView](automationpeer.mdx#uid-0ce0c26ad7) | Attempts to bring the element associated with the automation peer into view. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetAcceleratorKey](automationpeer.mdx#uid-b27b870e23) | Gets the accelerator key combinations for the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetAccessKey](automationpeer.mdx#uid-0c0606dfaf) | Gets the access key for the element that is associated with the automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetAutomationControlType](automationpeer.mdx#uid-f7daf3a583) | Gets the control type for the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetAutomationId](automationpeer.mdx#uid-ec722c2168) | Gets the automation ID of the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetBoundingRectangle](automationpeer.mdx#uid-f04c4b54df) | Gets the bounding rectangle of the element that is associated with the automation peer in top-level coordinates. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetChildren](automationpeer.mdx#uid-1974fa1efa) | Gets the child automation peers. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetClassName](automationpeer.mdx#uid-ee7505094d) | Gets a string that describes the class of the element. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetHeadingLevel](automationpeer.mdx#uid-52680c5dea) | Gets the heading level that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetHelpText](automationpeer.mdx#uid-3613ae2a30) | Gets text that provides help for the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetItemStatus](automationpeer.mdx#uid-798f219773) | Gets the item status that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetItemType](automationpeer.mdx#uid-d858421abf) | Gets the item type that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetLabeledBy](automationpeer.mdx#uid-98bd49471d) | Gets the automation peer for the label that is targeted to the element. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetLandmarkType](automationpeer.mdx#uid-57bba04eba) | Gets the control type for the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetLiveSetting](automationpeer.mdx#uid-75007f578a) | Gets the current live setting that is associated with this this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetLocalizedControlType](automationpeer.mdx#uid-262763e857) | Gets a human-readable localized string that represents the type of the control that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetName](automationpeer.mdx#uid-ac6dd5a547) | Gets text that describes the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetParent](automationpeer.mdx#uid-947969c77f) | Gets the [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) that is the parent of this [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer). Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetPlaceholderText](automationpeer.mdx#uid-1ced74e763) | Gets text that provides a placeholder for the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetProvider](automationpeer.mdx#uid-ee05fc8d1e) | Inherited from [AutomationPeer](automationpeer.mdx). |
| [HasKeyboardFocus](automationpeer.mdx#uid-5f0d3a3d10) | Gets a value that indicates whether the element that is associated with this automation peer currently has keyboard focus. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsContentElement](automationpeer.mdx#uid-5202d69eb1) | Gets a value that indicates whether the element that is associated with this automation peer contains data that is presented to the user. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsControlElement](automationpeer.mdx#uid-665cdd1957) | Gets a value that indicates whether the element is understood by the user as interactive or as contributing to the logical structure of the control in the GUI. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsEnabled](automationpeer.mdx#uid-cc55d0a61a) | Gets a value indicating whether the control is enabled for user interaction. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsKeyboardFocusable](automationpeer.mdx#uid-c9dfcdf842) | Gets a value that indicates whether the element can accept keyboard focus. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsOffscreen](automationpeer.mdx#uid-72084dcbfb) | Gets a value that indicates whether an element is off the screen. Inherited from [AutomationPeer](automationpeer.mdx). |
| [RaisePropertyChangedEvent](automationpeer.mdx#uid-ffcc0e3d63) | Raises an event to notify the automation client of a changed property value. Inherited from [AutomationPeer](automationpeer.mdx). |
| [SetFocus](automationpeer.mdx#uid-6a8d233e48) | Sets the keyboard focus on the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [ShowContextMenu](automationpeer.mdx#uid-8bfe04d25b) | Shows the context menu for the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |

## Properties

| Name | Description |
| --- | --- |
| [Owner](controlautomationpeer.mdx#uid-9c72446c3c) | Inherited from [ControlAutomationPeer](controlautomationpeer.mdx). |

## Events

| Name | Description |
| --- | --- |
| [ChildrenChanged](automationpeer.mdx#uid-d7771086b7) | Occurs when the children of the automation peer have changed. Inherited from [AutomationPeer](automationpeer.mdx). |
| [PropertyChanged](automationpeer.mdx#uid-7b87077a9e) | Occurs when a property value of the automation peer has changed. Inherited from [AutomationPeer](automationpeer.mdx). |

</ApiRefPage>

